antenna/antenna/static/css/main.css
* {
  box-sizing: border-box;
  -o-box-sizing: border-box;
  -ms-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
}

body {
  font-family: Inconsolata;
  text-align: center;
}

h1 {
  background: url(../images/ernie.png) no-repeat center center;
  width: 150px;
  height: 150px;
  background-size: 150px;
  margin: 50px auto;
  text-indent: -1000em;
}

h2, h3 {
  font-weight: normal;
}

a {
  color: inherit;
  text-decoration: underline;
}

.ernie {
  background: url(../images/bg.jpg) no-repeat center center;
  background-size: cover;
}

.desc {
  background: #e6dada;
}

.demo {
  background: #274046;
  color: white;
}

.demo input {
  border: 0;
  background: #274046;
  color: white;
  border-bottom: 1px solid;
  font-size: 30px;
  padding: 0.5em 1em;
  text-align: center;
}

.demo input:active,
.demo input:focus {
  outline: none;
}

.demo button {
  background: #274046;
  color: white;
  border: 1px solid;
  line-height: 2;
  padding: 0 1em;
}

.reply {
  font-size: 1.5em;
  max-width: 40em;
  margin: 3em auto 0 auto;
  white-space: pre-line;
}

